# 2025-mlops

./: .gitignore  README.md  bento.ipynb  pyproject.toml  service.py
1-lightning/: .env_example  README.md  pyproject.toml  start_mlflow.sh  train.py
lightning/: start_mlflow.sh  train.py
