[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "optuna>=4.6.0",
    "pillow>=12.0.0",
    "pytorch-lightning>=2.5.6",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
